--- a/Resume.html
+++ b/Resume.html
@@ -55,11 +55,11 @@
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about-us.html">Projects</a>
+                  <a class="nav-link" href="Projects.html">Projects</a>
                 </li>
                
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Resume</a>
+                  <a class="nav-link" href="Resume.html">Resume</a>
                 </li>
               </ul>
             </div>
