--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about-us.html">Projects</a>
+                  <a class="nav-link" href="Projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Resume</a>
+                  <a class="nav-link" href="Resume.html">Resume</a>
                 </li>
                 <!-- <li class="nav-item">
                   <a class="nav-link" href="services.html">Services</a>
