--- a/Projects.html
+++ b/Projects.html
@@ -141,7 +141,7 @@
           <h2>Explore PNW</h2>
           <p>
 			Front-end Application built using JavaScript, HTML 5, CSS and Bootstrap.
-			A Simple yet robust this app compiles a list of parks in the pacific Northwest. It can then be filtered based on your favorite activity and also allows you to view them in a list of favorites.
+			A Simple yet robust this app compiles a list of parks in the Pacific Northwest. It can then be filtered based on your favorite activity and also allows you to view them in a list of favorites.
           </p>
         </div>
         <div class="testi_inner">
