--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         ><img src="icons8-github-50.png" alt="git" height="60px"/>
                       </a>
                     
-                      <a href="www.linkedin.com/in/anotherjessica-haugen"
+                      <a href="https://www.linkedin.com/in/anotherjessica-haugen"
                         ><img src="icons8-linkedin-50.png" alt="linkedin" height="60px"></a>
 					</div>
                   
