--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                   <h3>Hey, I'm </h3>
                   <h1> Jessica Haugen</h1>
                   <h2>Software Engineer</h2>
+                  <h3>j.rose.haugen@gmail.com</h3>
 				  <!-- <p><img src="Favorites/email-mail-open-at (1).png" alt="email" height="45px"> j.rose.haugen@gmail.com</p> -->
                   
 					
